汉化 conf目录下的件

--- a/conf/atcommands.yml
+++ b/conf/atcommands.yml
@@ -22,10 +22,10 @@
 # Atcommand Settings
 #
 ###########################################################################
-# - Command                  Command name.
-#   Aliases:                 Aliases for the command. (Optional)
-#     - <AliasName>
-#   Help                     Help message for the command. (Optional)
+# - Command                  指令名.
+#   Aliases:                 指令的别名. (可选)
+#     - <AliasName>             - 别名
+#   Help                     帮助命令的需讯息. (可选)
 ###########################################################################
 
 Header:
@@ -325,18 +325,22 @@ Body:
       4048 明星斗士 (联盟)	 4238 宝宝明星斗士 (联盟)
   - Command: option
     Help: |
-      参数: <参数1> <参数2>(可叠加) <参数3>(可叠加)
-      为角色添加指定效果
-       <参数1>       <参数2>        <参数3>               <参数3>
-      01: 石化      01: 幻觉       01: 视觉           512: 手推车 Lv. 4
-      02: 冰冻      02: 诅咒       02: 伪装          1024: 手推车 Lv. 5
-      03: 眩晕      04: 沉默       04: 隐匿          2048: 兽人头
-      04: 睡眠      08: Signum     08: 手推车 Lv. 1  4096: 礼服
-      06: 发呆      16: 黑暗       16: 鹰            8192: Ruwach
-      07: 燃烧      32: Angelus    32: 骑乘         16384: Chasewalk
-      08: 监禁      64: 出血       64: 隐形
-      16: (无)     128: 中毒       128: 手推车 Lv. 2
-      32: (无)     256: 恐惧       256: 手推车 Lv. 3
+      指令参数: <参数1> <参数2>(可堆叠) <参数3>(可堆叠)
+      为你的角色添加指定的视觉效果(负面效果往往也伴随着禁止移动).
+       <参数1>       <参数2>        <参数3>
+      01: 石化       01: 中毒       01: 火狩          512: Cart Lv. 4
+      02: 冰冻       02: 诅咒       02: 隐匿         1024: Cart Lv. 5
+      03: 晕眩       04: 沉默       04: 伪装         2048: 兽人脸
+      04: 睡眠       08: Signum     08: Cart Lv. 1   4096: Wedding
+      06: Petrify    16: 盲目       16: 猎鹰         8192: 光猎
+      07: 烧伤       32: Angelus    32: 乘坐大嘴鸟  16384: Chasewalk
+      08: 禁足       64: Bleeding   64: 不可见
+      16: 无效果    128: 致命荼毒  128: Cart Lv. 2
+      32: 被挑衅    256: 害怕      256: Cart Lv. 3
+      可堆叠的意思是, 使用 @option 指令时, 把参数的2个值相加可以同时得到两种效果.
+      例如: “参数3” 中的 1 表示火狩, 2 表示隐匿. 那么当你用 @option 0 0 3 的时候,
+            你将同时获得这两种效果, 因为 1(火狩) + 2(隐匿) 等于 3.
+      注意: 上述没翻译的效果, 皆于 2016年5月27日在 20150916 客户端中测试无效.
   - Command: heal
     Help: |
       参数: [<要恢复的HP量> <要恢复的SP量>]
