--- a/conf/channels.conf
+++ b/conf/channels.conf
@@ -1,9 +1,19 @@
-// Channel System Configuration File
+//--------------------------------------------------------------
+// 频道系统配置文件
+// 提示: 此文件没有任何重新加载的指令, 修改后必须重启地图服务器才能生效.
+//--------------------------------------------------------------
+
 channel_config: {
 
-	/* Colors available */
+	/* 颜色名称与颜色代码对照表 */
 	colors: {
-		Default: "0xffffff" /* Custom channels will use the first in the list unless a color is selected through @channel. */
+		/**
+		 * 颜色名称 : 此名称对应的十六进制颜色代码
+		 *
+		 * 除非玩家在使用 @channel 指令时指定了具体的消息颜色,
+		 * 否则玩家创建的频道将使用 Default 所对应的色值作为消息颜色.
+		 **/
+		Default: "0xffffff"
 		Red: "0xff0000"
 		Blue: "0x83cfe9"
 		Orange: "0xe57c00"
@@ -14,23 +24,23 @@ channel_config: {
 		Purple: "0xD67FFF"
 		LightGreen: "0xB6FF00"
 		Normal: "0x00ff00"
-		/* Add as many colors as you'd like. */
+		/* 在这里可以添加任何你想要的颜色代码配置 */
 	}
 
 	/**
-	 * Private channel config
+	 * 玩家自建的私有频道设置
 	 * - Always CHAN_TYPE_PUBLIC
 	 * - Always displayed in chat log as "#channel_name: <name>: <chat>"
 	 * - ID of private channels start at 1000
 	 **/
 	private_channel: {
-		allow: true			  // (bool)	Allow player to create their own channel?
-		color: "Default"	  // (string)	Default color, see colors
-		delay: 1000			  // (int)	Chat delay for each member
-		max_member: 1000	  // (int)	Max members
-		self_notif: true	  // (bool)	Show message when player enters or leaves the channel
-		join_notif: false	  // (bool)	Show message when player joined the channel
-		leave_notif: false	  // (bool)	Show message when player leaves the channel
+		allow: true			  // (bool)是否允许玩家建立自己的聊天频道?
+		color: "Default"	  // (string)	频道的消息颜色
+		delay: 1000			  // (int)		在此频道中的发言的间隔时间(单位为毫秒, 拥有 channel_admin 权限的账号不受限制)
+		max_member: 1000	  // (int)		每个频道的最大成员数量
+		self_notif: true	  // (bool)		当玩家加入或离开一个频道时, 是否显示一个仅他本人可见的提示信息
+		join_notif: false	  // (bool)		当有人加入频道时, 其他人是否显示提示消息
+		leave_notif: false	  // (bool)		当有人离开频道时, 其他人是否显示提示消息 (退出游戏并不算离开, 只有使用 @channel leave #xx 指令才会有消息)
 		/* Moderation feature for channel owner, allowed to: */
 		ban: true			  // (bool)	Ban players
 		kick: true			  // (bool)	Kick players
@@ -39,28 +49,28 @@ channel_config: {
 	}
 
 	/**
-	 * Default server channels
+	 * 服务器默认内置的公共频道
 	 **/
 	channels: (
 	/**
-	 * Structure
+	 * 结构说明
 	{
-		name: "#channel"		 // (string)	Channel name
-		password: ""			 // (string)	Channel password
-		alias: "[Channel]"		 // (string)	Message from this that channel will be displayed instead the channel name
-		color: "Default"		 // (string)	Channel color
-		type: "CHAN_TYPE_PUBLIC" // (string)	Channel type: CHAN_TYPE_PUBLIC, CHAN_TYPE_ALLY, CHAN_TYPE_MAP
-		autojoin: false			 // (bool)	Players will auto join channel
-		delay: 1000				 // (int)	Chat delay for each player
-		leave: true				 // (bool)	Player is allowed to leave the channel
-		chat: true				 // (bool)	Player is allowed to chat on this channel
-		color_override: false	 // (bool)	Allow players to change the private channel color to their own
-		self_notif: true		 // (bool)	Show message when player enters or leaves the channel
-		join_notif: false		 // (bool)	Show message when player joined the channel
-		leave_notif: false		 // (bool)	Show message when player leaves the channel
+		name: "#channel"		 // (string)	频道名称
+		password: ""			 // (string)	频道密码
+		alias: "[Channel]"		 // (string)	发送到此频道的消息, 在聊天栏中显示的前缀信息, 普遍设置为频道名称
+		color: "Default"		 // (string)	频道的消息颜色
+		type: "CHAN_TYPE_PUBLIC" // (string)	频道的类型: CHAN_TYPE_PUBLIC, CHAN_TYPE_ALLY, CHAN_TYPE_MAP
+		autojoin: false			 // (bool)		玩家是否会在进入游戏后自动加入此频道
+		delay: 1000				 // (int)		在此频道中的发言的间隔时间(单位为毫秒, 拥有 channel_admin 权限的账号不受限制)
+		leave: true				 // (bool)		是否允许玩家离开此频道
+		chat: true				 // (bool)		在此频道中玩家是否可以聊天(若为 false 则只有拥有 channel_admin 权限的账号才能聊天, 权限设置见 conf/groups.conf)
+		color_override: false	 // (bool)		Allow players to change the private channel color to their own
+		self_notif: true		 // (bool)		当玩家加入或离开一个频道时, 是否显示一个仅他本人可见的提示信息
+		join_notif: false		 // (bool)		当有人加入频道时, 其他人是否显示提示消息
+		leave_notif: false		 // (bool)		当有人离开频道时, 其他人是否显示提示消息 (退出游戏并不算离开, 只有使用 @channel leave #xx 指令才会有消息)
 		groupid: (0,..,99)		 // (list,int)	Only players with valid group IDs are allowed to join. Group with 'channel_admin' can always enter the channel.
 		/// All values above are default settings
-	},							 // Use comma if followed by other channel
+	},							 // 如果这不是最后一个频道设置, 请记得在"右大括号"后添加一个"英文逗号"
 	 **/
 	{
 		name: "#global"
@@ -72,16 +82,16 @@ channel_config: {
 		leave: false
 	},
 	{
-		name: "#support"
-		alias: "[Support]"
+		name: "#问答"
+		alias: "[问答]"
 		color: "Blue"
 		type: "CHAN_TYPE_PUBLIC"
 		delay: 1000
 		autojoin: false
 	},
 	{
-		name: "#trade"
-		alias: "[Trade]"
+		name: "#交易"
+		alias: "[交易]"
 		color: "LightGreen"
 		type: "CHAN_TYPE_PUBLIC"
 		delay: 1000
@@ -90,14 +100,14 @@ channel_config: {
 	)
 
 	/**
-	 * Channel config for guild alliance
-	 * For the structure, see the 'channels' above
+	 * 公会同盟频道设置
+	 * 设置结构的说明, 请见上方的 'channels' 结构说明
 	 **/
 	ally: {
-		name: "#ally"
-		alias: "[Ally]"
+		name: "#同盟"
+		alias: "[同盟]"
 		color: "Green"
-		type: "CHAN_TYPE_ALLY" // DO NOT CHANGE THIS VALUE
+		type: "CHAN_TYPE_ALLY" // 不要修改此处的值, 否则功能将出现异常
 		delay: 1000
 		autojoin: false
 		leave: true
@@ -105,14 +115,14 @@ channel_config: {
 	}
 
 	/**
-	 * Channel config for map channel
-	 * For the structure, see the 'channels' above
+	 * 地图频道设置
+	 * 设置结构的说明, 请见上方的 'channels' 结构说明
 	 **/
 	map: {
-		name: "#map"
-		alias: "[Map]"
+		name: "#地图"
+		alias: "[地图]"
 		color: "Yellow"
-		type: "CHAN_TYPE_MAP" // DO NOT CHANGE THIS VALUE
+		type: "CHAN_TYPE_MAP" // 不要修改此处的值, 否则功能将出现异常
 		delay: 1000
 		autojoin: false
 		leave: true
