--- a/conf/login_athena.conf
+++ b/conf/login_athena.conf
@@ -160,13 +160,13 @@ min_group_id_to_connect: -1
 // 当一个玩家被提升到 VIP 玩家组时, 那么他的 group_id 会变成这里的指定值
 vip_group: 5
 
-// How many characters are allowed per account?
-// You cannot exceed the limit of MAX_CHARS slots, defined in mmo.hpp, or chars_per_account
-// will default to MAX_CHARS.
-// 0 will default to the value of MIN_CHARS. (default)
+// 普通账号允许建立几个角色? 
+// 
+// 你不能创建超过 MAX_CHARS 个账号角色, 他在 mmo.hpp 中配置.
+// 如果设置为 0, 则只能创建 MIN_CHARS 个角色.
 chars_per_account: 0
 
-// Max character limit increase for VIP accounts (0 to disable)
+// VIP 账号允许比普通账号多建立几个角色?
 // Increase the value of MAX_CHARS if you want to increase vip_char_increase.
 // Note: The amount of VIP characters = MAX_CHARS - chars_per_account.
 // Note 2: This setting must be set after chars_per_account.
