--- a/conf/script_athena.conf
+++ b/conf/script_athena.conf
@@ -1,29 +1,33 @@
-//--------------------------------------------------------
-// rAthena Script Configuration File
-//--------------------------------------------------------
+//--------------------------------------------------------------
+// rAthena 脚本配置文件
+//--------------------------------------------------------------
 
-
+// 当调用脚本指令提供的参数数量不足的时候, 是否显示警告信息?
+// 默认值为: yes
 warn_func_mismatch_paramnum: yes
 
+// 每一个脚本的最大指令数量是多少? 超过这个数量会报错.
+// 注意: 除非你知道你在做什么, 否则不需要修改此选项的值.
+//       因为 rAthena 官方有那么多超大的脚本, 都没有超过这个限制, 所以没必要修改.
 check_cmdcount: 655360
 
+// 每一个脚本的最大goto跳转数量是多少? 超过这个数量会报错.
+// 注意: 除了脚本中的 goto 标签外, 其他的 callfunc 等一切导致代码
+//       会从A点跳转到B点继续执行的语法, 都算做goto跳转.
 check_gotocount: 2048
 
-// Default value of the 'min' argument of the script command 'input'.
-// When the 'min' argument isn't provided, this value is used instead.
-// Defaults to 0.
+// 使用 input 脚本指令要求玩家输入数字时, 填写的数字的最小不能低于多少?
+// 如果注释掉此选项, 则玩家填写多少就是多少(允许玩家填写负数).
+// 例如填写 0 的话, 当玩家填写小于 0 的数值都会被强制等于 0.
 //input_min_value: 0
 
-// Default value of the 'max' argument of the script command 'input'.
-// When the 'max' argument isn't provided, this value is used instead.
-// Defaults to INT_MAX.
-//input_max_value: 2147483647
+// 使用 input 脚本指令要求玩家输入数字时, 填写的数字的最大不能超过多少?
+// 如果注释掉此选项, 则玩家填写多少就是多少. 最大值是 INT_MAX (即2147483647)
+// 例如填写 10000000 的话, 当玩家填写大于 10000000 的数值都会被强制等于 10000000.
 input_max_value: 10000000
 
-// Specifies whether or not each built-in function's arguments are checked for
-// correct type. When a function is given an argument different from what it
-// expects, a warning is thrown before the function is ran anyway.
-// Default: yes
+// 当调用脚本指令时传递的参数类型不正确的时候, 是否显示警告信息?
+// 默认值为: yes
 warn_func_mismatch_argtypes: yes
 
 import: conf/import/script_conf.txt
