--- a/conf/subnet_athena.conf
+++ b/conf/subnet_athena.conf
@@ -1,7 +1,12 @@
-// Subnet support file
-// Format is:
-// subnet: net-submask:char_ip:map_ip
-// you can add more than one subnet (max 16)
-// check is if((net-submask & char_ip ) == (net-submask & servip)) => ok
+//--------------------------------------------------------------
+// 子网掩码配置文件
+//--------------------------------------------------------------
+//
+// 数据库格式说明:
+// subnet: 子网掩码:角色服务器IP地址:地图服务器IP地址
+// 
+// 你可以在此添加更多的子网设置, 最多支持16条
+// 当 ((角色服务器IP地址 & 子网掩码 ) == (客户端的IP地址 & 子网掩码)) 匹配通过时
+// 客户端将会连接到规则指定的地图服务器IP地址
 
 subnet: 255.0.0.0:127.0.0.1:127.0.0.1
