--- a/conf/packet_athena.conf
+++ b/conf/packet_athena.conf
@@ -21,26 +21,29 @@ debug: no
 // How long can a socket stall before closing the connection (in seconds)
 stall_time: 60
 
-//----- IP Rules Settings -----
+//----- IP 规则设置 -----
 
-// If IP's are checked when connecting.
-// This also enables DDoS protection.
+// 当有新的连接请求需要建立时, 是否先检查对方的IP地址
+// 这个选项打开时, 也会启用 DDoS 攻击防护机制.
 enable_ip_rules: yes
 
-// Order of the checks
-//   deny,allow     : Checks deny rules, then allow rules. Allows if no rules match.
-//   allow,deny     : Checks allow rules, then deny rules. Allows if no rules match.
-//   mutual-failure : Allows only if an allow rule matches and no deny rules match.
-// (default is deny,allow)
+// 检查IP地址是否合法的名单顺序
+//   deny,allow     : 先检查黑名单规则, 再检查白名单规则, 
+//                    如果IP地址没有在任何名单中出现, 则通过. 
+//   allow,deny     : 先检查白名单规则, 再检查黑名单规则, 
+//                    如果IP地址没有在任何名单中出现, 则通过. 
+//   mutual-failure : 要求IP地址必须白名单中, 
+//                    并且与此同时不在黑名单中, 才判定为通过. 
+// (默认值为 deny,allow 表示先检查黑名单规则, 再检查白名单规则)
 
 order: deny,allow
 // order: allow,deny
 // order: mutual-failure
 
-// IP rules
-//   allow : Accepts connections from the ip range (even if flagged as DDoS)
-//   deny  : Rejects connections from the ip range
-// The rules are processed in order, the first matching rule of each list (allow and deny) is used
+// IP 规则
+//   allow : 允许连接的IP范围(哪怕它被标记为DDoS的攻击者)
+//   deny  : 拒绝连接的IP范围
+// 程序在处理规则的时候, 优先使用匹配上IP地址的第一个设置
 
 // allow: 127.0.0.1
 // allow: 192.168.0.0/16
@@ -50,20 +53,21 @@ order: deny,allow
 // deny: 127.0.0.1
 
 
-//---- DDoS Protection Settings ----
-// If ddos_count connection request are made within ddos_interval msec, it assumes it's a DDoS attack
+//---- DDoS 攻击防护设置 ----
+// 如果在 ddos_interval 选项指定的时间间隔内, 某个IP地址建立连接的次数
+// 超过了 ddos_count 选项指定的次数, 那么将这个IP视为发起了DDoS攻击
 
-// Consecutive attempts interval (msec)
-// (default is 3000 msecs, 3 seconds)
+// 连续尝试建立连接的间隔时间 (单位为毫秒)
+// (默认值为 3000 毫秒, 即3秒)
 ddos_interval: 3000
 
-// Consecutive attempts trigger
-// (default is 5 attempts)
+// 连续尝试建立连接的次数
+// (默认值为 5 次)
 ddos_count: 5
 
-// The time interval after which the threat of DDoS is assumed to be gone. (msec)
-// After this amount of time, the DDoS restrictions are lifted.
-// (default is 600000 msecs, 10 minutes)
+// 当某个IP地址被判定为发起DDoS攻击之后, 
+// 需要过多长时间(单位为毫秒)才解除这个IP的连接限制
+// (默认值为 600000 毫秒, 即10分钟)
 ddos_autoreset: 600000
 
 
