文件编码转化为UTF8-BOM conf/log_athena.conf conf/packet_athena.conf conf/script_athena.conf conf/subnet_athena.conf

--- a/conf/packet_athena.conf
+++ b/conf/packet_athena.conf
@@ -1,4 +1,4 @@
-// Athena sockets Configuration file
+ï»¿// Athena sockets Configuration file
 // translated (davidsiaw)
 
 
@@ -21,29 +21,29 @@ debug: no
 // How long can a socket stall before closing the connection (in seconds)
 stall_time: 60
 
-//----- IP ¹æÔòÉèÖÃ -----
+//----- IP è§„åˆ™è®¾ç½® -----
 
-// µ±ÓÐÐÂµÄÁ¬½ÓÇëÇóÐèÒª½¨Á¢Ê±, ÊÇ·ñÏÈ¼ì²é¶Ô·½µÄIPµØÖ·
-// Õâ¸öÑ¡Ïî´ò¿ªÊ±, Ò²»áÆôÓÃ DDoS ¹¥»÷·À»¤»úÖÆ.
+// å½“æœ‰æ–°çš„è¿žæŽ¥è¯·æ±‚éœ€è¦å»ºç«‹æ—¶, æ˜¯å¦å…ˆæ£€æŸ¥å¯¹æ–¹çš„IPåœ°å€
+// è¿™ä¸ªé€‰é¡¹æ‰“å¼€æ—¶, ä¹Ÿä¼šå¯ç”¨ DDoS æ”»å‡»é˜²æŠ¤æœºåˆ¶.
 enable_ip_rules: yes
 
-// ¼ì²éIPµØÖ·ÊÇ·ñºÏ·¨µÄÃûµ¥Ë³Ðò
-//   deny,allow     : ÏÈ¼ì²éºÚÃûµ¥¹æÔò, ÔÙ¼ì²é°×Ãûµ¥¹æÔò, 
-//                    Èç¹ûIPµØÖ·Ã»ÓÐÔÚÈÎºÎÃûµ¥ÖÐ³öÏÖ, ÔòÍ¨¹ý. 
-//   allow,deny     : ÏÈ¼ì²é°×Ãûµ¥¹æÔò, ÔÙ¼ì²éºÚÃûµ¥¹æÔò, 
-//                    Èç¹ûIPµØÖ·Ã»ÓÐÔÚÈÎºÎÃûµ¥ÖÐ³öÏÖ, ÔòÍ¨¹ý. 
-//   mutual-failure : ÒªÇóIPµØÖ·±ØÐë°×Ãûµ¥ÖÐ, 
-//                    ²¢ÇÒÓë´ËÍ¬Ê±²»ÔÚºÚÃûµ¥ÖÐ, ²ÅÅÐ¶¨ÎªÍ¨¹ý. 
-// (Ä¬ÈÏÖµÎª deny,allow ±íÊ¾ÏÈ¼ì²éºÚÃûµ¥¹æÔò, ÔÙ¼ì²é°×Ãûµ¥¹æÔò)
+// æ£€æŸ¥IPåœ°å€æ˜¯å¦åˆæ³•çš„åå•é¡ºåº
+//   deny,allow     : å…ˆæ£€æŸ¥é»‘åå•è§„åˆ™, å†æ£€æŸ¥ç™½åå•è§„åˆ™, 
+//                    å¦‚æžœIPåœ°å€æ²¡æœ‰åœ¨ä»»ä½•åå•ä¸­å‡ºçŽ°, åˆ™é€šè¿‡. 
+//   allow,deny     : å…ˆæ£€æŸ¥ç™½åå•è§„åˆ™, å†æ£€æŸ¥é»‘åå•è§„åˆ™, 
+//                    å¦‚æžœIPåœ°å€æ²¡æœ‰åœ¨ä»»ä½•åå•ä¸­å‡ºçŽ°, åˆ™é€šè¿‡. 
+//   mutual-failure : è¦æ±‚IPåœ°å€å¿…é¡»ç™½åå•ä¸­, 
+//                    å¹¶ä¸”ä¸Žæ­¤åŒæ—¶ä¸åœ¨é»‘åå•ä¸­, æ‰åˆ¤å®šä¸ºé€šè¿‡. 
+// (é»˜è®¤å€¼ä¸º deny,allow è¡¨ç¤ºå…ˆæ£€æŸ¥é»‘åå•è§„åˆ™, å†æ£€æŸ¥ç™½åå•è§„åˆ™)
 
 order: deny,allow
 // order: allow,deny
 // order: mutual-failure
 
-// IP ¹æÔò
-//   allow : ÔÊÐíÁ¬½ÓµÄIP·¶Î§(ÄÄÅÂËü±»±ê¼ÇÎªDDoSµÄ¹¥»÷Õß)
-//   deny  : ¾Ü¾øÁ¬½ÓµÄIP·¶Î§
-// ³ÌÐòÔÚ´¦Àí¹æÔòµÄÊ±ºò, ÓÅÏÈÊ¹ÓÃÆ¥ÅäÉÏIPµØÖ·µÄµÚÒ»¸öÉèÖÃ
+// IP è§„åˆ™
+//   allow : å…è®¸è¿žæŽ¥çš„IPèŒƒå›´(å“ªæ€•å®ƒè¢«æ ‡è®°ä¸ºDDoSçš„æ”»å‡»è€…)
+//   deny  : æ‹’ç»è¿žæŽ¥çš„IPèŒƒå›´
+// ç¨‹åºåœ¨å¤„ç†è§„åˆ™çš„æ—¶å€™, ä¼˜å…ˆä½¿ç”¨åŒ¹é…ä¸ŠIPåœ°å€çš„ç¬¬ä¸€ä¸ªè®¾ç½®
 
 // allow: 127.0.0.1
 // allow: 192.168.0.0/16
@@ -53,21 +53,21 @@ order: deny,allow
 // deny: 127.0.0.1
 
 
-//---- DDoS ¹¥»÷·À»¤ÉèÖÃ ----
-// Èç¹ûÔÚ ddos_interval Ñ¡ÏîÖ¸¶¨µÄÊ±¼ä¼ä¸ôÄÚ, Ä³¸öIPµØÖ·½¨Á¢Á¬½ÓµÄ´ÎÊý
-// ³¬¹ýÁË ddos_count Ñ¡ÏîÖ¸¶¨µÄ´ÎÊý, ÄÇÃ´½«Õâ¸öIPÊÓÎª·¢ÆðÁËDDoS¹¥»÷
+//---- DDoS æ”»å‡»é˜²æŠ¤è®¾ç½® ----
+// å¦‚æžœåœ¨ ddos_interval é€‰é¡¹æŒ‡å®šçš„æ—¶é—´é—´éš”å†…, æŸä¸ªIPåœ°å€å»ºç«‹è¿žæŽ¥çš„æ¬¡æ•°
+// è¶…è¿‡äº† ddos_count é€‰é¡¹æŒ‡å®šçš„æ¬¡æ•°, é‚£ä¹ˆå°†è¿™ä¸ªIPè§†ä¸ºå‘èµ·äº†DDoSæ”»å‡»
 
-// Á¬Ðø³¢ÊÔ½¨Á¢Á¬½ÓµÄ¼ä¸ôÊ±¼ä (µ¥Î»ÎªºÁÃë)
-// (Ä¬ÈÏÖµÎª 3000 ºÁÃë, ¼´3Ãë)
+// è¿žç»­å°è¯•å»ºç«‹è¿žæŽ¥çš„é—´éš”æ—¶é—´ (å•ä½ä¸ºæ¯«ç§’)
+// (é»˜è®¤å€¼ä¸º 3000 æ¯«ç§’, å³3ç§’)
 ddos_interval: 3000
 
-// Á¬Ðø³¢ÊÔ½¨Á¢Á¬½ÓµÄ´ÎÊý
-// (Ä¬ÈÏÖµÎª 5 ´Î)
+// è¿žç»­å°è¯•å»ºç«‹è¿žæŽ¥çš„æ¬¡æ•°
+// (é»˜è®¤å€¼ä¸º 5 æ¬¡)
 ddos_count: 5
 
-// µ±Ä³¸öIPµØÖ·±»ÅÐ¶¨Îª·¢ÆðDDoS¹¥»÷Ö®ºó, 
-// ÐèÒª¹ý¶à³¤Ê±¼ä(µ¥Î»ÎªºÁÃë)²Å½â³ýÕâ¸öIPµÄÁ¬½ÓÏÞÖÆ
-// (Ä¬ÈÏÖµÎª 600000 ºÁÃë, ¼´10·ÖÖÓ)
+// å½“æŸä¸ªIPåœ°å€è¢«åˆ¤å®šä¸ºå‘èµ·DDoSæ”»å‡»ä¹‹åŽ, 
+// éœ€è¦è¿‡å¤šé•¿æ—¶é—´(å•ä½ä¸ºæ¯«ç§’)æ‰è§£é™¤è¿™ä¸ªIPçš„è¿žæŽ¥é™åˆ¶
+// (é»˜è®¤å€¼ä¸º 600000 æ¯«ç§’, å³10åˆ†é’Ÿ)
 ddos_autoreset: 600000
 
 
