--- a/conf/subnet_athena.conf
+++ b/conf/subnet_athena.conf
@@ -1,12 +1,12 @@
-//--------------------------------------------------------------
-// ×ÓÍøÑÚÂëÅäÖÃÎÄ¼þ
+ï»¿//--------------------------------------------------------------
+// å­ç½‘æŽ©ç é…ç½®æ–‡ä»¶
 //--------------------------------------------------------------
 //
-// Êý¾Ý¿â¸ñÊ½ËµÃ÷:
-// subnet: ×ÓÍøÑÚÂë:½ÇÉ«·þÎñÆ÷IPµØÖ·:µØÍ¼·þÎñÆ÷IPµØÖ·
+// æ•°æ®åº“æ ¼å¼è¯´æ˜Ž:
+// subnet: å­ç½‘æŽ©ç :è§’è‰²æœåŠ¡å™¨IPåœ°å€:åœ°å›¾æœåŠ¡å™¨IPåœ°å€
 // 
-// Äã¿ÉÒÔÔÚ´ËÌí¼Ó¸ü¶àµÄ×ÓÍøÉèÖÃ, ×î¶àÖ§³Ö16Ìõ
-// µ± ((½ÇÉ«·þÎñÆ÷IPµØÖ· & ×ÓÍøÑÚÂë ) == (¿Í»§¶ËµÄIPµØÖ· & ×ÓÍøÑÚÂë)) Æ¥ÅäÍ¨¹ýÊ±
-// ¿Í»§¶Ë½«»áÁ¬½Óµ½¹æÔòÖ¸¶¨µÄµØÍ¼·þÎñÆ÷IPµØÖ·
+// ä½ å¯ä»¥åœ¨æ­¤æ·»åŠ æ›´å¤šçš„å­ç½‘è®¾ç½®, æœ€å¤šæ”¯æŒ16æ¡
+// å½“ ((è§’è‰²æœåŠ¡å™¨IPåœ°å€ & å­ç½‘æŽ©ç  ) == (å®¢æˆ·ç«¯çš„IPåœ°å€ & å­ç½‘æŽ©ç )) åŒ¹é…é€šè¿‡æ—¶
+// å®¢æˆ·ç«¯å°†ä¼šè¿žæŽ¥åˆ°è§„åˆ™æŒ‡å®šçš„åœ°å›¾æœåŠ¡å™¨IPåœ°å€
 
 subnet: 255.0.0.0:127.0.0.1:127.0.0.1
