将分组名称默认改成英文, 避免英文系统下报错

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -105,7 +105,7 @@ http://rathena.org/board/index.php?showtopic=58877
 groups: (
 {
 	id: 0 								// 分组编号 0 - 这是每个新账户的初始等级
-	name: "普通玩家"					// Player - 普通玩家
+	name: "Player"					// Player - 普通玩家
 	level: 0
 	inherit: ( /* 空 */ )				// 放空表示不继承任何其他分组的设置
 	commands: {
@@ -120,8 +120,8 @@ groups: (
 },
 {
 	id: 1								// 分组编号 1
-	name: "超级玩家"					// Super Player - 超级玩家
-	inherit: ( "普通玩家" ) 			// [超级玩家]默认继承[普通玩家]的所有设置
+	name: "Super Player"					// Super Player - 超级玩家
+	inherit: ( "Player" ) 			// [Super Player]默认继承[Player]的所有设置
 	level: 0
 	commands: {
 		/* 查询型指令 */
@@ -162,8 +162,8 @@ groups: (
 },
 {
 	id: 2								// 分组编号 2
-	name: "客服人员"					// Support - 客服人员
-	inherit: ( "超级玩家" )				// [客服人员]默认继承[超级玩家]的所有设置
+	name: "Support"					// Support - 客服人员
+	inherit: ( "Super Player" )				// [Support]默认继承[Super Player]的所有设置
 	level: 1
 	commands: {
 		version: true					// 准许使用 @version 指令, 用于显示服务器SVN版本号
@@ -187,8 +187,8 @@ groups: (
 },
 {
 	id: 3								// 分组编号 3
-	name: "脚本管理员"					// Script Manager - 脚本管理员
-	inherit: ( "客服人员" )				// [脚本管理员]默认继承[客服人员]的所有设置
+	name: "Script Manager"					// Script Manager - 脚本管理员
+	inherit: ( "Support" )				// [Script Manager]默认继承[Support]的所有设置
 	level: 1
 	commands: {
 		tonpc: true						// 准许使用 @tonpc 指令, 用于传送至NPC
@@ -206,8 +206,8 @@ groups: (
 },
 {
 	id: 4								// 分组编号 4
-	name: "活动管理员"					// Event Manager - 活动管理员
-	inherit: ( "客服人员" )				// [活动管理员]默认继承[客服人员]的所有设置
+	name: "Event Manager"					// Event Manager - 活动管理员
+	inherit: ( "Support" )				// [Event Manager]默认继承[Support]的所有设置
 	level: 1
 	commands: {
 		monster: true					// 准许使用 @monster 指令, 用于召唤魔物
@@ -245,8 +245,8 @@ groups: (
 },
 {
 	id: 5								// 分组编号 5
-	name: "VIP 玩家"					// VIP - VIP 玩家
-	inherit: ( "普通玩家" )				// [VIP 玩家]默认继承[普通玩家]的所有设置
+	name: "VIP"					// VIP - VIP 玩家
+	inherit: ( "Player" )				// [VIP]默认继承[Player]的所有设置
 	level: 0
 	commands: {
 		rates: true						// 准许使用 @rates 指令, 用于显示服务器经验值设置
@@ -258,8 +258,8 @@ groups: (
 },
 {
 	id: 10								// 分组编号 10
-	name: "执法人员"					// Law Enforcement - 执法人员
-	inherit: ( "客服人员" )				// [执法人员]默认继承[客服人员]的所有设置
+	name: "Law Enforcement"					// Law Enforcement - 执法人员
+	inherit: ( "Support" )				// [Law Enforcement]默认继承[Support]的所有设置
 	level: 2
 	commands: {
 		hide: true						// 准许使用 @hide 指令, 用于隐身
@@ -295,9 +295,9 @@ groups: (
 },
 {
 	id: 99								// 分组编号 99
-	name: "超级管理员"					// Admin - 超级管理员
+	name: "Admin"					// Admin - 超级管理员
 	level: 99
-	inherit: ( "客服人员", "执法人员" )	// [超级管理员]默认继承[客服人员]和[执法人员]的所有设置
+	inherit: ( "Support", "Law Enforcement" )	// [Admin]默认继承[Support]和[Law Enforcement]的所有设置
 	commands: {
 		/* 空 */						// 被赋予 all_commands 权限后这里可以不填
 	}
