将频道名称默认改成英文, 避免英文系统下报错

--- a/conf/channels.conf
+++ b/conf/channels.conf
@@ -82,16 +82,16 @@ channel_config: {
 		leave: false
 	},
 	{
-		name: "#问答"
-		alias: "[问答]"
+		name: "#support"
+		alias: "[Support]"
 		color: "Blue"
 		type: "CHAN_TYPE_PUBLIC"
 		delay: 1000
 		autojoin: false
 	},
 	{
-		name: "#交易"
-		alias: "[交易]"
+		name: "#trade"
+		alias: "[Trade]"
 		color: "LightGreen"
 		type: "CHAN_TYPE_PUBLIC"
 		delay: 1000
@@ -104,8 +104,8 @@ channel_config: {
 	 * 设置结构的说明, 请见上方的 'channels' 结构说明
 	 **/
 	ally: {
-		name: "#同盟"
-		alias: "[同盟]"
+		name: "#ally"
+		alias: "[Ally]"
 		color: "Green"
 		type: "CHAN_TYPE_ALLY" // 不要修改此处的值, 否则功能将出现异常
 		delay: 1000
@@ -119,8 +119,8 @@ channel_config: {
 	 * 设置结构的说明, 请见上方的 'channels' 结构说明
 	 **/
 	map: {
-		name: "#地图"
-		alias: "[地图]"
+		name: "#map"
+		alias: "[Map]"
 		color: "Yellow"
 		type: "CHAN_TYPE_MAP" // 不要修改此处的值, 否则功能将出现异常
 		delay: 1000
