漢化一行文字

--- a/conf/battle/monster.conf
+++ b/conf/battle/monster.conf
@@ -293,7 +293,7 @@ mvp_tomb_delay: 9000
 //大型魔物的经验将翻倍，小型魔物的经验将减半。
 //只在'monster'命令下调用@monsterbig和@monstersmall。(注1)
 
-// Default: no
+// 默认值为: no
 mob_size_influence: no
 
 // How should a monster be trapped by an icewall casted directly on it?
